# AI-Financial-Intelligence-Trading-Simulation-Platform

./: .env.example  .gitignore  AUDIT_REPORT.md  README.md  project_handover.md  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.render  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0004_warehouse_baseline.py  0005_forecasts_backtests.py  0006_agent_runs.py  0007_hardening.py  0008_chat.py  0009_user_ownership.py  0010_revoke_admin_execute.py  0011_simulation.py  0012_research.py  0013_run_context.py  0014_watchlists.py  0015_ingest_jobs.py  0016_stop_limit.py  0017_intraday_forecasts.py
backend/app/: main.py
backend/app/agents/: analysts.py  base.py  context.py  explain.py  orchestrator.py  outputs.py  portfolio.py  researchers.py  risk.py  trader.py
backend/app/backtesting/: base.py  nautilus_backtester.py  registry.py  simple_backtester.py
backend/app/catalog/: __init__.py  curated.py
backend/app/core/: auth.py  config.py  instruments.py  logging.py  metrics.py  middleware.py  security.py
backend/app/db/: base.py
backend/app/llm/: base.py  fake_client.py  gemini_client.py  openai_client.py  registry.py
backend/app/ml/: base.py  baseline_forecaster.py  kronos_forecaster.py  kronos_variants.py  registry.py  remote_kronos_forecaster.py
backend/app/models/: __init__.py  agent_run.py  backtest.py  chat.py  forecast.py  ingest_job.py  (+6 more)
backend/tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_backtesting.py  test_catalog.py  test_chat.py  test_config.py  test_data_ingest.py  test_db_integration.py  test_embeddings.py  test_evaluation.py  test_explain.py  test_forecast_intervals.py  test_forecasters.py  test_guest_reset_db.py  test_indicators.py  test_instrument_admin_db.py  test_kronos_variants.py  test_llm.py  test_market_expansion.py  test_market_expansion_db.py  test_news.py  test_news_rag.py  test_news_rag_db.py  test_ohlcv.py  test_portfolio_analytics.py  test_providers.py  test_remote_forecaster.py  test_research.py  test_security.py  test_simulation.py  test_simulation_db.py  test_space_client.py  test_watchlists_db.py
(+171 files in other folders)
