[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-fin-platform-backend"
version = "0.1.0"
description = "AI Financial Intelligence Platform - Phase 1 backend (data, indicators, forecasting, backtesting)"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "structlog>=24.1",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "torch>=2.2",
    "huggingface-hub>=0.24",
    "safetensors>=0.4",
    "einops>=0.8",
    "tqdm>=4.66",
    "nautilus_trader==1.230.0",
    "google-genai>=1.0",
    "openai>=1.40",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "asgi-lifespan>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# Vendored third-party code (Kronos) - do not lint upstream source.
extend-exclude = ["app/ml/kronos_src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"app/backtesting/*" = ["N"]  # nautilus API uses non-pep8 names

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
plugins = []
exclude = ["alembic/", "app/ml/kronos_src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: heavy ML/backtest tests that download models or run full backtests (deselect with -m 'not slow')",
    "db: integration tests that require a live Postgres DATABASE_URL",
]
